#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([SMD-REWEIGHT], [1.0], [bussi@sissa.it])

# Checks for programs.
AC_PROG_CXX

AC_LANG([C++])

AC_OPENMP
CXXFLAGS="$CXXFLAGS $OPENMP_CXXFLAGS"

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
